@@ -206,5 +206,3 @@ y luego hacer que acabe entrando en zxvision_simple_window_manager con esa venta
 
 -Renombrar setting de background windows por multitask windows? O algo así
 Debe indicar que se puede dejar ventanas en background pero que también pueden haber múltiples ventanas a la vez 
-
--Scr fondo poder aplicar tramado 0/1 
